feat: stock chart prototype
